kubernetes/jsdyb-k8s-001/apps/network/cilium/gateway/httproute-hubble.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: hubble
    app.kubernetes.io/name: hubble
    app.kubernetes.io/part-of: cilium
  name: hubble
  namespace: network
spec:
  hostnames:
  - hubble.${EXTERNAL_DOMAIN}
  parentRefs:
  - name: private-gateway
    namespace: network
  rules:
  - backendRefs:
    - kind: Service
      name: hubble-ui
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
